# worldbest-deploy

./: .dockerignore  .env.example  .env.local  .gitignore  .mcp.json  .vercelignore  88AWAY_DEVELOPER_HANDOFF_IMPLEMENTATION_GUIDE.md  COMPLETE_ROADMAP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPER_QUICKSTART.md  DOCS_INDEX.md  Dockerfile  EXECUTIVE_HANDOFF.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_ROADMAP.md  PROJECT_STATUS.md  QA_STRATEGY.md  QUICK_DEPLOY.md  QUICK_START_CHECKLIST.md  README.md  START_HERE.md  TEST_COVERAGE_ANALYSIS.md  USER_FAQ.md  deploy.sh  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  validate-deployment.sh  (+2 more)
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  character.py  embedding.py  location.py  project.py  user.py  voice_profile.py
backend/app/prompts/: base.py  drafting.py  editing.py  voice.py
backend/app/routers/: ai.py  billing.py  characters.py  export.py  locations.py  projects.py  voice_profiles.py
backend/app/services/: ai_orchestrator.py  bible_retriever.py  export_service.py  line_editor.py  originality_pipeline.py  (+2 more)
backend/tests/: conftest.py  test_ai_originality_endpoint.py  test_originality_pipeline.py
(+631 files in other folders)
